--- a/index.html
+++ b/index.html
@@ -7,9 +7,14 @@
     Hello there, awesome person! 
         <img src="https://avatars.githubusercontent.com/u/81404305?v=4">
         <ul>
-    <li>https://www.instagram.com/</li>
-    <li>https://twitter.com/?lang=en</li>
-    <li>https://in.pinterest.com/</li>
+              <li><a href ="https://www.instagram.com/">This is a link to Instagram</a></li>
+              <li><a href="https://twitter.com/?lang=en">This is a link to Twitter</a></li>
+              <li><a href="https://in.pinterest.com/">This is a link to Pinterest</a></li>
 </ul>
   </body>
 </html>
+
+
+
+
+
